# audiobook_server

./: .gitignore  .justfile  Cargo.toml  account.http  build.rs
.github/workflows/: release.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20230917_000001_create_account_table.rs  m20230917_000002_create_author.rs  m20230917_000003_create_music_table.rs  m20230917_000004_create_progress_table.rs
src/: lib.rs  main.rs
src/account/: mod.rs
src/auth/: mod.rs
src/consts/: mod.rs
src/database/: mod.rs
src/entities/: account.rs  author.rs  mod.rs  music.rs  prelude.rs  progress.rs
src/management/: mod.rs
src/middleware/: admin_auth.rs  log_system.rs  mod.rs  tools.rs  user_auth.rs  webui_auth.rs
src/music/: mod.rs
src/progress/: mod.rs
src/tools/: mod.rs
src/webui/: mod.rs
static/: authors.html  bookdetail.html  books.html  index.html  login.html  logout.html  manifest.json  player.html  playertest.html
static/css/: style.css
static/js/: player.js
templates/: account_manager.tera  author_detail.tera  authors.tera  base.tera  book_detail.tera  book_manager.tera  books.tera  index.tera  login.tera  logout.tera  manager.tera  manager_base.tera  newplayer.tera  player.tera  simple.tera  user_op.tera
