[package]
name = "audiobook_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.32.0", features = ["rt", "macros"] }
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
sea-orm = { version = "0.12.2", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
    "macros",
] }
tower = "0.4.13"
futures = "0.3.28"
eyre = "0.6.8"
