[package]
name = "audiobook_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "http2"] }
tokio = { version = "1.32.0", features = ["rt", "macros"] }
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
sea-orm = { version = "0.12.2", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
    "macros",
] }
tower = "0.4.13"
futures = "0.3.28"
eyre = "0.6.8"
redis = { version = "0.23.3", features = ["aio", "tokio-comp"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.4.3", features = ["derive", "env"] }
tower-cookies = "0.9.0"
md5 = "0.7.0"
rand = "0.8.5"
hex = "0.4.3"
cookie = "0.17.0"
tokio-util = "0.7.8"
tower-http = { version = "0.4.4", features = ["fs"] }
tera = "1.19.1"
